--- a/index/static/index/css/header.css
+++ b/index/static/index/css/header.css
@@ -1,28 +1,31 @@
-.nav, .nav-element {
-    background-color: darkblue;
-    color: white;
-}
-
-div.nav {
+.nav-container {
+    background-color: black;
     width: 100%;
-    height: 40px;
-    margin-bottom: 10px;
+    padding-top: 5px;
+    display: flex;
+    flex-direction: column;
 }
-
-.nav {
+.nav-list {
+    display: flex;
+    list-style: none;
+    background: darkblue;
     padding: 0;
-    margin: 0;
+    margin: 5 0 0 0;
 }
 
-li.nav {
-    display: inline;
-    padding: 8px;
+.nav-element {
+    background-color: blue;
+    padding: 5px;
+    color: white;
+    text-decoration: none;
 }
 
 body {
     margin: 0;
 }
 
-.nav-menu {
-    list-style: none;
+.logo {
+    color: white;
+    margin: 0;
+    padding: 0;
 }
