--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -1,11 +1,10 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'index/css/header.css' %}">
 
-<div class="nav">
-    <div class="nav nav-menu"
-    <ul class="nav">
-        <li class="nav nav-element"><a class="nav-element" href="{% url 'index' %}">Home</a></li>
-        <li class="nav nav-element"><a class="nav-element" href="{% url 'about' %}">About</a></li>
+<div class="nav-container nav">
+    <div class="logo"><p class="logo">Open</p><p class="logo">Gov</p></div>
+    <ul class="nav-list nav">
+        <li class="nav-element nav"><a class="nav-element" href="{% url 'index' %}">Home</a></li>
+        <li class="nav-element nav"><a class="nav-element" href="{% url 'about' %}">About</a></li>
     </ul>
-    </div>
 </div>
