--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -1,3 +1,8 @@
+<head>
+    <title>Clear Government</title>
+</head>
+
+<body>
 {% load static %}
 <link rel="stylesheet" href="{% static 'index/css/header.css' %}">
 
