--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -66,4 +66,5 @@ Lorem ipsum, etc.<br />
 Lorem ipsum, etc.<br />
 Lorem ipsum, etc.<br />
 Lorem ipsum, etc.
-</body>
+
+{% include 'index/footer.html' %}
